[package]
name = "moegl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "22.1.0"
winit = { version = "0.29.0", features = ["rwh_05"] } 

log = { version = "0.4.21", features = ["std"] }
env_logger = "0.10"

pollster = "0.3"

crossbeam = "0.8.4"

downcast-rs = "2.0.1"



